--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav>
         <ul onclick="getElementById('close-menu').checked= false;">
           <li><a href="#intro">Intro</a></li>
-          <li><a href="#top3">top 3</a></li>
+          <li><a href="#top3">Video</a></li>
           <li><a href="#grid-one">infográfico</a></li>
           <li><a href="#gallery">galeria</a></li>
           <li><a href="#contact">contato</a></li>
@@ -82,10 +82,7 @@ Talvez você pense que por estar sem cabelo em algumas partes você pode pensar 
       </p>
       <p> Nós da Manual temos profissionais especializados no tratamento de queda de cabelos, e nossos produtos possuem certificação da Anvisa, que ao comprá-los, você receberá diagnósticos individuais por médicos especialistas.</p>
       <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/l2VsohB1Rf0" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/HtjWFnaKYos" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
     </div>
   </section>
