--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Talvez você pense que por estar sem cabelo em algumas partes você pode pensar 
           Recupere sua Confiança
         </h2>
         <p>
-          <em>"E ai, tá indo pro cinema?, Não? E essas duas entradas?"</em>  Já ouviu isso em algum momento.
+          <em>"E ai, tá indo pro cinema?, Não? E essas duas entradas?"</em>   Se você está lendo esse artigo, já deve ter ouvido essa piada infame em algum momento.
           A calvicíe é um fator natural e vai ocorrer em algum momento da vida de todo homem.
         </p>
         <p>
